[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
  { name="eagle" }, { email="eagle@42.fr" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Home = "https://github.com/eagle/ft_package"
